# fractal_mpi

./: CMakeLists.txt  fps_counter.cpp  fps_counter.h  main.cpp  main2.cpp
